--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "deploy": "npx hardhat ignition deploy ./ignition/modules/Lol42.ts --network localhost",
     "deploy:testnet": "npx hardhat ignition deploy ./ignition/modules/Lol42.ts --network sepolia --deployment-id sepolia-deployment",
     "upload": "node ./pinata_upload.js",
-    "verify": "npx hardhat ignition verify sepolia-deployment"
+    "verify": "npx hardhat ignition verify sepolia-deployment",
+    "docs:dev": "vitepress dev documentation",
+    "docs:build": "vitepress build documentation",
+    "docs:preview": "vitepress preview documentation"
   },
   "keywords": [],
   "author": "",
@@ -36,7 +39,8 @@
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "vitepress": "^1.2.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
